# lineup_builder

./: .gitignore  ARCHITECTURE.md  README.md  RELEASE_NOTES_v1.2.md  __init__.py  app.py  auto_save.json  data_manager.py  date_time_picker.py  dev.bat  dev.py  drag_drop.py  events_manager.py  lineup_builder.py  lineup_builder.spec  lineup_data.yaml  main.py  output_builder.py  pyproject.toml  repomix.config.json  requirements.txt  slot_manager.py  ui_builder.py
.github/: copilot-instructions.md
lineup_builder/: app.py  debounce.py  dj_roster.py  genre_manager.py  slot_manager.py  slot_ui.py  ui_builder.py
src/backend/: __init__.py  data_manager.py  debounce.py  discord_oauth.py  discord_service.py  event_bus.py  lineup_model.py  output_builder.py  output_generator.py  types.py
src/frontend/: __init__.py  app.py  date_time_picker.py  dj_roster.py  drag_drop.py  events_manager.py  fonts.py  genre_manager.py  import_parser.py  roster.py  settings_manager.py  slot_manager.py  slot_ui.py  theme.py  types.py  ui_builder.py  utils.py  widgets.py
tests/: test_architecture.py  test_import.py
